jumping height of sales block on mobile hover was fixed

--- a/src/components/sale-plan/styles.scss
+++ b/src/components/sale-plan/styles.scss
@@ -32,7 +32,6 @@
 .sale-plan__columnbox__column {
     text-align: center;
     padding: 110px 45px 0;
-    margin: 40px 0 41px;
     background-size: cover;
     background-position: center;
     width: calc( 100% / 3 );
@@ -41,8 +40,12 @@
         width: 100%;
     }
 
-    &:hover {
-        margin: 0;
+    @media (min-width: $sm-up) {
+        margin: 40px 0 41px;
+
+        &:hover {
+            margin: auto;
+        }
     }
 }
 
